tests/compile-fail/tracked_method_incompatibles.stderr
error: tracked methods's first argument must be declared as `self`, not `&self` or `&mut self`
 --> tests/compile-fail/tracked_method_incompatibles.rs:9:17
  |
9 |     fn ref_self(&self, db: &dyn salsa::Database) {}
  |                 ^

error: tracked methods's first argument must be declared as `self`, not `&self` or `&mut self`
  --> tests/compile-fail/tracked_method_incompatibles.rs:15:21
   |
15 |     fn ref_mut_self(&mut self, db: &dyn salsa::Database) {}
   |                     ^

error: tracked method already has a lifetime parameter in scope
  --> tests/compile-fail/tracked_method_incompatibles.rs:21:27
   |
21 |     fn multiple_lifetimes<'db1>(&mut self, db: &'db1 dyn salsa::Database) {}
   |                           ^^^^

error: tracked methods cannot have non-lifetime generic parameters
  --> tests/compile-fail/tracked_method_incompatibles.rs:27:22
   |
27 |     fn type_generics<T>(&mut self, db: &dyn salsa::Database) -> T {
   |                      ^
